Shenandoah: A Low-Pause-Time Garbage Collector

XMLWordPrintable

    • gc
    • b02
    • x86, x86_64, aarch64
    • generic

      This is a backport of the Shenandoah garbage collector for JDK11. It backports roughly the Shenandoah GC from JDK15. See the original JEP 189:

      https://bugs.openjdk.java.net/browse/JDK-8046179

      What is backported is - for the most part - the Shenandoah implementation as it is present at this revision:
      http://hg.openjdk.java.net/jdk/jdk/rev/b324ae69f933

            Assignee:
            Roman Kennke
            Reporter:
            Roman Kennke
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: